# StdExamples

./: .gitignore
C++20/: CMakeLists.txt
C++20/Concepts/: CMakeLists.txt
C++20/Concepts/src/: main.cpp
C++20/Concepts/src/Serializer/: ContainersConcepts.hpp  ISerializeble.hpp  Serializer.hpp  SerializerAssociativeContainer.hpp  SerializerBase.hpp  SerializerContainer.hpp  SerializerPair.h  SerializerPair.hpp  SerializerSequenceContainer.hpp  SerializerSerializeble.hpp  SerializerString.hpp
C++20/Concepts/src/Tests/: serializecontainerstests.cpp  serializecontainerstests.h  serializenumberstests.cpp  serializenumberstests.h  serializestringstests.cpp  serializestringstests.h  serializetests.cpp  serializetests.h
C++20/Modules/: CMakeLists.txt
C++20/Modules/src/: main.cpp
C++20/build-Concepts-Desktop-Debug/: CMakeCache.txt  Concepts  Makefile  cmake_install.cmake
C++20/build-Concepts-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-b3e670f8569bd4551245.json  cmakeFiles-v1-4566c871824a97b30be6.json  codemodel-v2-b2cffae492fb562a4a1b.json  index-2021-06-04T13-34-08-0483.json  target-Concepts-Debug-eb592f13187aeec659f3.json
serialization_stream/: CMakeLists.txt  main.cpp  sequence_container_helpers.hpp  serialization.hpp  serialization_concepts.hpp  serialization_iostream.hpp  serialization_tests.cpp  serialization_tests.h  serialization_tools.h  serialization_types.hpp  vector_streambuff.h
